vlib/v/checker/tests/dump_char.vv
c := char(67)
dump(byte(c))
dump(c)
